Promote tags to a first-class feature
